finalizada la documentacion de la api con swagger
